[package]
name = "cf-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7.2"
regex = "1.8.1"
